# rs-anthropic-tools

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile.toml  README.md
src/: lib.rs
src/common/: errors.rs  mod.rs  tool.rs  usage.rs
src/messages/: mod.rs  response.rs  streaming.rs
src/messages/request/: body.rs  content.rs  mcp.rs  message.rs  mod.rs  role.rs
tests/: api_integration.rs
