[package]
name = "anthropic-tools"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "A Rust library for interacting with the Anthropic API"
repository = "https://github.com/akitenkrad/rs-anthropic-tools"
keywords = ["anthropic", "claude", "api", "ai", "llm"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
image = "0.25.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
request = { package = "reqwest", version = "0.13.1", features = ["blocking", "json"] }
strum = { version = "0.27.2", features = ["derive"] }
base64 = "0.22.1"

[dev-dependencies]
test-log = { version = "0.2.19", features = ["trace"] }
